--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,6 @@
       </section>
     </main>
 
-    <script src="..\src\main.js"></script>
+    <script src="../src/main.js"></script>
   </body>
 </html>
