--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
       <section class="main__control control container">
         <h1 class="control__title">TASKMANAGER</h1>
       </section>
+      <section class="board container">
+        <div class="board__tasks"></div>
+      </section>
     </main>
 
     <script src="bundle.js"></script>
